--- a/index.html
+++ b/index.html
@@ -1,13 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>E-mail Subscription</title>
+    <link rel="stylesheet" href="mail.css">
 </head>
+
 <body>
-    <div class="container">
-        
+    <div class="hero">
+        <h3>Coming soon!</h3>
+        <h1>Our brand new <br> Website is on It's way</h1>
+        <p>Subscriebe for more detail</p>
+        <form>
+             <input type="email" placeholder=" Enter your mail id " required>
+             <button type="submit"> <img src="/media/send-icon.png" width="30px"> </button>
+        </form>
     </div>
 </body>
+
 </html>
