--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
              <input type="email" placeholder=" Enter your mail id " required>
              <button type="submit"> <img src="/media/send-icon.png" width="30px"> </button>
         </form>
+        <span>Thank you for Subscriebe!</span>
     </div>
 </body>
 
